k8s/kos-svc/dev/10-usagedata-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usagedata-db
  labels:
    app: usagedata-db
spec:
  selector:
    matchLabels:
      app: usagedata-db
  template:
    metadata:
      labels:
        app: usagedata-db
    spec:
      containers:
      - name: usagedata-db
        image: ktis-bastion01.container.ipc.kt.com:5000/kos-mvp/usagedata-db:v1.0
        imagePullPolicy: "Always"
        ports:
          - containerPort: 8080
