k8s/kos-svc/dev/20-cachemanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manage-cache
  labels:
    app: manage-cache
spec:
  selector:
    matchLabels:
      app: manage-cache
  replicas: 1
  template:
    metadata:
      labels:
        app: manage-cache
    spec:
      containers:
      - name: manage-cache
        image: ktis-bastion01.container.ipc.kt.com:5000/kos-mvp/manage-cache:v1.0
        imagePullPolicy: "Always"
        ports:
         - containerPort: 8080
