k8s/kos-svc/dev/30-usagedata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usagedata
  labels:
    app: usagedata
spec:
  selector:
    matchLabels:
      app: usagedata
  replicas: 1
  template:
    metadata:
      labels:
        app: usagedata
    spec:
      containers:
      - name: usagedata
#        image: ktis-bastion01.container.ipc.kt.com:5000/kos-mvp/usagedata:v1.0
        image: neocode24/usgaedata:v1.0
        imagePullPolicy: "Always"
        ports:
         - containerPort: 8080
  strategy:
    rollingUpdate:
      maxSurge: 50%
