k8s/kos-svc/dev/50-kafkaconsumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  labels:
    app: kafka-consumer
spec:
  selector:
    matchLabels:
      app: kafka-consumer
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
      - name: kafka-consumer
        image: ktis-bastion01.container.ipc.kt.com:5000/kos-mvp/kafka-consumer:v1.0
        imagePullPolicy: "Always"
        ports:
         - containerPort: 8080
  strategy:
    rollingUpdate:
      maxSurge: 50%
