k8s/kos-svc/dev/60-kafkaproducer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-producer
  labels:
    app: kafka-producer
spec:
  selector:
    matchLabels:
      app: kafka-producer
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-producer
    spec:
      containers:
      - name: kafka-producer
        image: kos-cluster.icp:8500/kos-mvp/kafka-producer
        imagePullPolicy: "Always"
        ports:
         - containerPort: 8080
  strategy:
    rollingUpdate:
      maxSurge: 50%
