k8s/kos-svc/dev/70-certificate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificate-sample
  labels:
    app: certificate-sample
spec:
  selector:
    matchLabels:
      app: certificate-sample
  replicas: 1
  template:
    metadata:
      labels:
        app: certificate-sample
    spec:
      containers:
      - name: certificate-sample
        image: docker.io/neocode24/certificate-sample:v1.0
        imagePullPolicy: "Always"
        volumeMounts:
          - mountPath: /var/run/secrets/java.io/keystores
            name: keystore-volume
      volumes:
      - name: keystore-volume
        emptyDir: {}
      - name: serving-cert
        secret:
          secretName: custom-cert
  strategy:
    rollingUpdate:
      maxSurge: 50%
