k8s/kos-svc/dev/11-usagedata-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usagedata-db
  labels:
    app: usagedata-db
spec:
  type: ClusterIP
  ports:
  - name: usagedata-db
    port: 8080
    targetPort: 8080
  selector:
    app: usagedata-db
