k8s/kos-svc/dev/31-usagedata-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usagedata
  labels:
    app: usagedata
spec:
  type: NodePort
  ports:
  - name: usagedata
    port: 8080
    targetPort: 8080
  selector:
    app: usagedata
