k8s/kos-svc/dev/40-externaldb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-vm
spec:
  ports:
  - port: 5432
    targetPort: 5432
---
kind: Endpoints
apiVersion: v1
metadata:
  name: postgres-vm
subsets:
  - addresses:
      - ip: 169.56.108.2 
    ports:
      - port: 5432
