k8s/kos-svc/dev/51-kafkaconsumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-consumer
  labels:
    app: kafka-consumer
spec:
  type: ClusterIP
  ports:
  - name: kafka-consumer
    port: 8080
    targetPort: 8080
  selector:
    app: kafka-consumer
