k8s/kos-svc/dev/12-usagedata-db-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-kos-mvp-usagedata-db
spec:
  host: kos-mvp.usagedata-db.container.ipc.kt.com
  #port:
    #targetPort: 80
  path: "/"
  to:
    kind: Service
    name: usagedata-db
    weight: 100
  wildcardPolicy: None
