k8s/kos-svc/dev/33-usagedata-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-kos-mvp
spec:
  host: kos-mvp.container.ipc.kt.com
  #port:
    #targetPort: 80
  path: "/"
  to:
    kind: Service
    name: usagedata
    weight: 100
  wildcardPolicy: None
